Add paragraph in About page. Add .nojekyll file

--- a/about.html
+++ b/about.html
@@ -45,8 +45,7 @@
               <a href="index.html">Jerome Chua</a>
             </h1>
             <p class="sidebar-p">
-              I previosuly worked as a data analyst, now turned software
-              engineer.
+              Previously working as a data anylst, now turned software engineer
             </p>
             <p class="sidebar-p">From the little red dot, Singapore.</p>
             <ul class="sidebar-menu">
@@ -106,11 +105,10 @@
               <div class="content-column-content">
                 <h1>About me</h1>
                 <p class="lead">
-                  An sincerity so extremity he additions. Her yet
-                  <strong>there truth merit</strong>. Mrs all projecting
-                  favourable now unpleasing. Son law garden chatty temper. Oh
-                  children provided to mr elegance marriage strongly. Off can
-                  admiration prosperous now devonshire diminution law.
+                  Hi there! I am Jerome. I was previously involved in data
+                  analytics & machine learning projects and worked with Python
+                  and SQL. Pursuing a second bachelor's degree part-time. Scrum
+                  certfied.
                 </p>
                 <div class="row">
                   <div class="col-lg-8">
