--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
           <div class="sidebar-content">
             <h1 class="sidebar-heading"><a href="index.html">Creative</a></h1>
             <p class="sidebar-p">
-              I am a creative illustrator and graphic designer with more than 10
-              years of experience.
+             Previously working as a data anylst, now turned software engineer. 
             </p>
-            <p class="sidebar-p">
-              Originally from Toronto, currently based in London.
+            <p class="sidebar-p">From the little red dot, Singapore.</p>
             </p>
             <ul class="sidebar-menu">
               <!-- Link-->
