--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading">
-              <a href="index.html">Jerome Chua</a>
+              <a href="index.html">Get to know me</a>
             </h1>
             <p class="sidebar-p">
-              Previously working as a data anylst, now turned software engineer
+              Previously working as a data anylst, now turned software engineer.
             </p>
             <p class="sidebar-p">From the little red dot, Singapore.</p>
             <ul class="sidebar-menu">
