--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--   *** SIDEBAR ***-->
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
-            <h1 class="sidebar-heading"><a href="index.html">Creative</a></h1>
+            <h1 class="sidebar-heading"><a href="index.html">Home</a></h1>
             <p class="sidebar-p">
              Previously working as a data anylst, now turned software engineer. 
             </p>
