--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,12 @@
         <!--   *** SIDEBAR ***-->
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
-            <h1 class="sidebar-heading"><a href="index.html">Let's chat</a></h1>
+            <h1 class="sidebar-heading">
+              <a href="index.html">Jerome Chua</a>
+            </h1>
             <p class="sidebar-p">
-              Previously working as a data anylst, now turned software engineer.
+              Hi there, I was previously working as a data anylst, now turned
+              software engineer.
             </p>
             <p class="sidebar-p">From the little red dot, Singapore.</p>
             <ul class="sidebar-menu">
