--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
         <!--   *** SIDEBAR ***-->
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
-            <h1 class="sidebar-heading"><a href="index.html">Home</a></h1>
+            <h1 class="sidebar-heading">
+              <a href="index.html">Jerome Chua</a>
+            </h1>
             <p class="sidebar-p">
-             Previously working as a data anylst, now turned software engineer. 
-            </p>
-            <p class="sidebar-p">From the little red dot, Singapore.</p>
+              Hi there, I was previously working as a data anylst, now turned
+              software engineer.
             </p>
             <ul class="sidebar-menu">
               <!-- Link-->
@@ -62,15 +63,17 @@
               </li>
             </ul>
             <p class="social">
-              <a href="#" data-animate-hover="pulse" class="external facebook"
-                ><i class="fa fa-facebook"></i></a
-              ><a href="#" data-animate-hover="pulse" class="external gplus"
-                ><i class="fa fa-google-plus"></i></a
-              ><a href="#" data-animate-hover="pulse" class="external twitter"
-                ><i class="fa fa-twitter"></i></a
-              ><a href="#" title="" class="external instagram"
-                ><i class="fa fa-instagram"></i></a
-              ><a href="#" data-animate-hover="pulse" class="email"
+              <a href="https://github.com/jerome-chua4" title="" class="github"
+                ><i class="fa fa-github"></i
+              ></a>
+
+              <a href="https://www.linkedin.com/in/jeromechua/" class="linkedin"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+              <a
+                href="mailto:jerome.chuame@gmail.com"
+                data-animate-hover="pulse"
+                class="email"
                 ><i class="fa fa-envelope"></i
               ></a>
             </p>
