--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Jerome Chua - Portfolio</title>
+  <title>Jerome Chua</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="all,follow" />
@@ -24,9 +24,7 @@
   />
   <!-- theme stylesheet-->
   <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet" />
-  <!-- Custom stylesheet - for your changes-->
   <link rel="stylesheet" href="css/custom.css" />
-  <!-- Favicon-->
   <link rel="shortcut icon" href="img/favicon.png" />
   <!-- Tweaks for older IEs-->
   <!--[if lt IE 9]>
@@ -42,12 +40,11 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading">
-              <a href="index.html">Get to know me</a>
+              <a href="index.html">Jerome Chua</a>
             </h1>
             <p class="sidebar-p">
               Previously working as a data anylst, now turned software engineer.
             </p>
-            <p class="sidebar-p">From the little red dot, Singapore.</p>
             <ul class="sidebar-menu">
               <!-- Link-->
               <li class="sidebar-item">
@@ -63,15 +60,17 @@
               </li>
             </ul>
             <p class="social">
-              <a href="#" data-animate-hover="pulse" class="external facebook"
-                ><i class="fa fa-facebook"></i></a
-              ><a href="#" data-animate-hover="pulse" class="external gplus"
-                ><i class="fa fa-google-plus"></i></a
-              ><a href="#" data-animate-hover="pulse" class="external twitter"
-                ><i class="fa fa-twitter"></i></a
-              ><a href="#" title="" class="external instagram"
-                ><i class="fa fa-instagram"></i></a
-              ><a href="#" data-animate-hover="pulse" class="email"
+              <a href="https://github.com/jerome-chua4" title="" class="github"
+                ><i class="fa fa-github"></i
+              ></a>
+
+              <a href="https://www.linkedin.com/in/jeromechua/" class="linkedin"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+              <a
+                href="mailto:jerome.chuame@gmail.com"
+                data-animate-hover="pulse"
+                class="email"
                 ><i class="fa fa-envelope"></i
               ></a>
             </p>
