Update home page, remove test file

--- a/about.html
+++ b/about.html
@@ -42,9 +42,8 @@
             <h1 class="sidebar-heading">
               <a href="index.html">Jerome Chua</a>
             </h1>
-            <p class="sidebar-p">
-              Previously working as a data anylst, now turned software engineer.
-            </p>
+            <p class="sidebar-p">Hi there, I was previously working as a data anylst, now turned
+              software engineer.            </p>
             <ul class="sidebar-menu">
               <!-- Link-->
               <li class="sidebar-item">
@@ -74,18 +73,10 @@
                 ><i class="fa fa-envelope"></i
               ></a>
             </p>
-            <div class="copyright text-center text-md-left">
-              <p class="credit">
-                &copy;2021 Jerome Chua <br />
-                <span style="font-size: 10px">
-                  Template by Bootstrapious.com
-                </span>
-              </p>
-            </div>
           </div>
         </div>
         <!--   *** SIDEBAR END ***  -->
-        <!--   *** DETAIL ***-->
+        <!--   *** DETAILS ***-->
         <div class="col-md-8 col-lg-9 content-column white-background">
           <div class="small-navbar d-flex d-md-none">
             <button
@@ -105,54 +96,44 @@
                 <h1>About me</h1>
                 <p class="lead">
                   Hi there! I am Jerome. I was previously involved in data
-                  analytics & machine learning projects and worked with Python
-                  and SQL. Pursuing a second bachelor's degree part-time. Scrum
-                  certfied.
+                  science projects and worked with Python
+                  and SQL. 
+                  Currently pursuing a second bachelor's degree part-time. 
                 </p>
                 <div class="row">
-                  <div class="col-lg-8">
+                  <div class="col-lg-12">
                     <p>
-                      Received overcame oh sensible so at an. Formed do change
-                      merely to county it.
-                      <strong>Am separate contempt</strong> domestic to to oh.
-                      On relation my so addition branched. Put hearing cottage
-                      she norland letters equally prepare too. Replied exposed
-                      savings he no viewing as up. Soon body add him hill. No
-                      father living really people estate if. Mistake do produce
-                      beloved demesne if am pursuit.
+                     I enjoy creating things from scratch. I embarked on many different interests and managed to gain professional experience. But software engineering is one of the very few things that allow me to gain deeper focus, enjoyment and fulfilment.
                     </p>
-                  </div>
-                  <div class="col-md-4">
-                    <p>
-                      <img
-                        src="img/about.jpg"
-                        alt="This is me"
-                        class="image rounded-circle img-fluid"
-                      />
-                    </p>
+                    <p>This is where I will be putting in most of my free time and developing mastery as I continue embark on this journey as a software engineer.</p>
                   </div>
                 </div>
-                <p>
-                  The Big Oxmox advised her not to do so, because there were
-                  thousands of bad Commas, wild Question Marks and devious
-                  Semikoli, but the Little Blind Text didn’t listen. She packed
-                  her seven versalia, put her initial into the belt and made
-                  herself on the way.
-                </p>
+              
                 <h4 class="text-uppercase">Education</h4>
-                <ul>
-                  <li>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                <ol type="i">
+                  <li>Rocket Academy</li>
+                  <ul>
+                  <li>Full-stack Software Engineering (Full-time) </li>
+                  </ul>
+                  <li>National University of Singapore</li>
+                  <ul><li>Bachelor of Technology, Software
+                    Engineering (Part-Time, On-going) </li></ul>                  
+                    <li>Swinburne University of Technology</li>
+                   <ul>
+                    <li>
+                    Bachelor of Business Administration</li></ul> 
                   </li>
-                  <li>Aliquam tincidunt mauris eu risus.</li>
+                    <li>General Assembly</li>
+                   <ul>
+                    <li>
+                    Data Science Immersive</li></ul>                
+                </ol>
+                   <h4 class="text-uppercase">Miscellaneous</h4>
+                   <ul>
+                     <li>Certified Scrum Product Owner®</li>
+                      <li>Taught pop and basic jazz piano to adult students at Play By Ear Music school for a year</li>
+                      <li>Professional photography experience; Tiffany & Co., The Macallan (published in Muse Media Asia magazines), PAP, Ola Beach Club</li>
                 </ul>
-                <p>
-                  When she reached the first hills of the Italic Mountains, she
-                  had a last view back on the skyline of her hometown
-                  Bookmarksgrove, the headline of Alphabet Village and the
-                  subline of her own road, the Line Lane. Pityful a rethoric
-                  question ran over her cheek, then
-                </p>
               </div>
             </div>
           </div>
