--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,6 @@
               Hi there, I was previously working as a data anylst, now turned
               software engineer.
             </p>
-            <p class="sidebar-p">From the little red dot, Singapore.</p>
             <ul class="sidebar-menu">
               <!-- Link-->
               <li class="sidebar-item">
@@ -66,27 +65,20 @@
               </li>
             </ul>
             <p class="social">
-              <a href="#" data-animate-hover="pulse" class="external facebook"
-                ><i class="fa fa-facebook"></i></a
-              ><a href="#" data-animate-hover="pulse" class="external gplus"
-                ><i class="fa fa-google-plus"></i></a
-              ><a href="#" data-animate-hover="pulse" class="external twitter"
-                ><i class="fa fa-twitter"></i></a
-              ><a href="#" title="" class="external instagram"
-                ><i class="fa fa-instagram"></i></a
-              ><a href="#" data-animate-hover="pulse" class="email"
+              <a href="https://github.com/jerome-chua4" title="" class="github"
+                ><i class="fa fa-github"></i
+              ></a>
+
+              <a href="https://www.linkedin.com/in/jeromechua/" class="linkedin"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+              <a
+                href="mailto:jerome.chuame@gmail.com"
+                data-animate-hover="pulse"
+                class="email"
                 ><i class="fa fa-envelope"></i
               ></a>
             </p>
-            <div class="copyright text-center text-md-left">
-              <p class="credit">
-                &copy;2021 Jerome Chua <br />
-                <span style="font-size: 10px">
-                  Template by Bootstrapious.com
-                </span>
-              </p>
-              <!-- Please do not remove the backlink to us, unless you support the development at http://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :)        -->
-            </div>
           </div>
         </div>
         <!--   *** SIDEBAR END ***  -->
@@ -109,38 +101,28 @@
               <div class="content-column-content">
                 <h1>Get in touch</h1>
                 <p class="lead">
-                  When she reached the first hills of the Italic Mountains, she
-                  had a last view back on the skyline of her hometown
-                  Bookmarksgrove, the headline of Alphabet Village and the
-                  subline of her own road, the Line Lane. Pityful a rethoric
-                  question ran over her cheek, then
+                  Please feel free to connect with me on LinkedIn or reach me at
+                  jerome.chuame@gmail.com
                 </p>
-                <p>
-                  Effects present letters inquiry no an removed or friends.
-                  Desire behind latter me though in. Supposing shameless am he
-                  engrossed up additions. My possible peculiar together to.
-                  Desire so better am cannot he up before points. Remember
-                  mistaken opinions it pleasure of debating. Court front maids
-                  forty if aware their at. Chicken use are pressed removed.
-                </p>
-                <p>
-                  Able an hope of body. Any nay shyness article matters own
-                  removal nothing his forming. Gay own additions education
-                  satisfied the perpetual. If he cause manor happy. Without
-                  farther she exposed saw man led. Along on happy could cease
-                  green oh.
-                </p>
-                <h4>You can find me also on:</h4>
+
+                <h4>You can find me here:</h4>
                 <p class="social social--big">
-                  <a href="#" title="" class="facebook"
-                    ><i class="fa fa-facebook"></i></a
-                  ><a href="#" title="" class="twitter"
-                    ><i class="fa fa-twitter"></i></a
-                  ><a href="#" title="" class="gplus"
-                    ><i class="fa fa-google-plus"></i></a
-                  ><a href="#" title="" class="instagram"
-                    ><i class="fa fa-instagram"></i></a
-                  ><a href="#" title="" class="email"
+                  <a
+                    href="https://github.com/jerome-chua4"
+                    title=""
+                    class="github"
+                    ><i class="fa fa-github"></i
+                  ></a>
+
+                  <a
+                    href="https://www.linkedin.com/in/jeromechua/"
+                    class="linkedin"
+                    ><i class="fa fa-linkedin"></i
+                  ></a>
+                  <a
+                    href="mailto:jerome.chuame@gmail.com"
+                    data-animate-hover="pulse"
+                    class="email"
                     ><i class="fa fa-envelope"></i
                   ></a>
                 </p>
