--- a/index.html
+++ b/index.html
@@ -77,20 +77,11 @@
                 ><i class="fa fa-envelope"></i
               ></a>
             </p>
-            <div class="copyright text-center text-md-left">
-              <p class="credit">
-                &copy;2021 Jerome Chua <br />
-                <span style="font-size: 10px">
-                  Template by Bootstrapious.com
-                </span>
-              </p>
-              <!-- Please do not remove the backlink to us, unless you support the development at http://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :)        -->
-            </div>
           </div>
         </div>
         <!--   *** SIDEBAR END ***  -->
         <!--   *** PORTFOLIO ***-->
-        <div class="col-md-8 col-lg-9 content-column">
+           <div class="col-md-8 col-lg-9 content-column">
           <div class="small-navbar d-flex d-md-none">
             <button
               type="button"
@@ -100,76 +91,70 @@
               <i class="fa fa-align-left mr-2"></i>Menu
             </button>
             <h1 class="small-navbar-heading">
-              <a href="index.html">Creative </a>
+              <a href="index.html">Jerome Chua </a>
             </h1>
           </div>
           <div class="grid row">
             <div class="col-md-6 grid-item">
               <div class="box-masonry">
                 <a
-                  href="detail.html"
-                  title=""
-                  class="box-masonry-image with-hover-overlay"
-                  ><img
-                    src="img/portfolio/a4-paper.jpg"
-                    alt=""
-                    class="img-fluid"
-                /></a>
-                <div class="box-masonry-hover-text-header">
-                  <a href="detail.html" class="tile-link"> </a>
-                  <h4>Name of the work 1</h4>
-                  <div class="box-masonry-desription">
-                    <p>
-                      Even the all-powerful Pointing has no control about the
-                      blind texts it is an almost unorthographic life. One day
-                      however a small line of blind text by the name of Lorem
-                      Ipsum decided to leave for the far World of Grammar.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 grid-item">
-              <div class="box-masonry">
-                <a
-                  href="detail.html"
+                  href="/portfolio/pfintracker.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/portfolio/business-card-26.jpg"
+                    src="img/portfolio/pfintracker.jpg"
+                    alt="pfintracker"
+                    class="img-fluid"
+                /></a>
+                <div class="box-masonry-text">
+                  <h4 class="box-h4"><a href="/portfolio/pfintracker.html">Personal Finance Tracker</a></h4>
+                  <div class="box-masonry-desription">
+                    <p>
+                      Personal expense tracker with categories & analytics to monitor spending trends
+                    </p>
+                  </div>
+                </div>
+              </div>             
+            </div>   
+
+            <div class="col-md-6 grid-item">
+              <div class="box-masonry">
+                <a
+                  href="levelsportal.html"
+                  title=""
+                  class="box-masonry-image with-hover-overlay with-hover-icon"
+                  ><img
+                    src="img/groupBuy/levelsportal.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="detail.html">Name of the work 2</a></h4>
+                  <h4><a href="groupBuy.html">Levels Portal</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      When she reached the first hills of the Italic Mountains,
-                      she had a last view back on the skyline of her hometown
-                      Bookmarksgrove, the headline of Alphabet Village and the
-                      subline of her own road, the Line Lane.
+                      A tech job portal with search & filters for users with relevant skill sets to find preferred jobs to apply
                     </p>
                   </div>
                 </div>
               </div>
             </div>
+
             <div class="col-md-6 grid-item">
               <div class="box-masonry">
                 <a
-                  href="detail.html"
+                  href="bookrepo.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/portfolio/gravity-paper.jpg"
+                    src="img/bookrepo.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="detail.html">Name of the work 3</a></h4>
+                  <h4><a href="stockPortfolio.html">Book Repo</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      Fifth abundantly made Give sixth hath. Cattle creature i
-                      be don't them.
+                     A book-note-taking app for users to share notes for the books they've read, track and customise their note-taking experience
                     </p>
                   </div>
                 </div>
@@ -178,43 +163,19 @@
             <div class="col-md-6 grid-item">
               <div class="box-masonry">
                 <a
-                  href="detail.html"
-                  title=""
-                  class="box-masonry-image with-hover-overlay"
-                  ><img
-                    src="img/portfolio/business-card.jpg"
-                    alt=""
-                    class="img-fluid"
-                /></a>
-                <div class="box-masonry-hover-text-header">
-                  <a href="detail.html" class="tile-link"> </a>
-                  <h4>Name of the work 5</h4>
-                  <div class="box-masonry-desription">
-                    <p>
-                      Fifth abundantly made Give sixth hath. Cattle creature i
-                      be don't them.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 grid-item">
-              <div class="box-masonry">
-                <a
-                  href="detail.html"
+                  href="palace.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/portfolio/label-clothes.jpg"
+                    src="img/projects/palace/gameplay.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="detail.html">Name of the work 7</a></h4>
+                  <h4><a href="palace.html">Travel Planner</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      Fifth abundantly made Give sixth hath. Cattle creature i
-                      be don't them.
+                      Travel planning application for users to add popular itinerary trip items & Google searches to their board
                     </p>
                   </div>
                 </div>
@@ -223,107 +184,45 @@
             <div class="col-md-6 grid-item">
               <div class="box-masonry">
                 <a
-                  href="detail.html"
+                  href="movegenre.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/portfolio/ipad-air-2.jpg"
+                    src="img/moviegenre.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="detail.html">Name of the work 8</a></h4>
+                  <h4><a href="moviegenre.html">Movie Genre Prediction</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      Fifth abundantly made Give sixth hath. Cattle creature i
-                      be don't them.
+                     Developed multi-label classification algorithm to predict unseen movie posters genres with 0.8 model accuracy
                     </p>
                   </div>
                 </div>
               </div>
-            </div>
+            </div>            
             <div class="col-md-6 grid-item">
               <div class="box-masonry">
                 <a
-                  href="detail.html"
+                  href="videopoker.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/portfolio/envelope-brand.jpg"
+                    src="img/videopoker.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="detail.html">Item with image</a></h4>
+                  <h4><a href="videoPoker.html">Video Poker</a></h4>
                   <div class="box-masonry-desription">
                     <p>
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts. A small river named Duden flows by their place and
-                      supplies it with the necessary regelialia. It is a
-                      paradisematic country, in which roasted parts of sentences
-                      fly into your mouth.
+                      An arcade casino game remake, based the classic five-card draw poker
                     </p>
                   </div>
                 </div>
-              </div>
+              </div>             
             </div>
-            <div class="col-md-6 grid-item">
-              <div class="box-masonry">
-                <a
-                  href="detail.html"
-                  title=""
-                  class="box-masonry-image with-hover-overlay"
-                  ><img
-                    src="img/portfolio/trifold.jpg"
-                    alt=""
-                    class="img-fluid"
-                /></a>
-                <div class="box-masonry-hover-text-header">
-                  <a href="detail.html" class="tile-link"> </a>
-                  <h4>Item with image</h4>
-                  <div class="box-masonry-desription">
-                    <p>
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts. A small river named Duden flows by their place and
-                      supplies it with the necessary regelialia. It is a
-                      paradisematic country, in which roasted parts of sentences
-                      fly into your mouth.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 grid-item">
-              <div class="box-masonry">
-                <a
-                  href="detail.html"
-                  title=""
-                  class="box-masonry-image with-hover-overlay"
-                  ><img
-                    src="img/portfolio/paper-presentation.jpg"
-                    alt=""
-                    class="img-fluid"
-                /></a>
-                <div class="box-masonry-hover-text-header">
-                  <a href="detail.html" class="tile-link"> </a>
-                  <h4>Item with image</h4>
-                  <div class="box-masonry-desription">
-                    <p>
-                      Far far away, behind the word mountains, far from the
-                      countries Vokalia and Consonantia, there live the blind
-                      texts. A small river named Duden flows by their place and
-                      supplies it with the necessary regelialia. It is a
-                      paradisematic country, in which roasted parts of sentences
-                      fly into your mouth.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
         <!--   *** PORTFOLIO END ***-->
       </div>
     </div>
