Add images and pfintracker page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </li>
             </ul>
             <p class="social">
-              <a href="https://github.com/jerome-chua4" title="" class="github"
+              <a href="https://github.com/jerome-chua" title="" class="github"
                 ><i class="fa fa-github"></i
               ></a>
 
@@ -146,7 +146,7 @@
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/bookrepo.png"
+                    src="img/portfolio/bookrepo.jpg"
                     alt=""
                     class="img-fluid"
                 /></a>
