Removed images, edit readme, edit type

--- a/portfolio/pfintracker.html
+++ b/portfolio/pfintracker.html
@@ -44,10 +44,9 @@
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
             <h1 class="sidebar-heading"><a href="index.html">Jerome Chua</a></h1>
-            <p class="sidebar-p">Previously working as a data anylst, now turned software engineer.
-</p>
+            <p class="sidebar-p">Previously working as a data anylst, now turned software engineer.</p>
 
- <ul class="sidebar-menu">
+       <ul class="sidebar-menu">
               <!-- Link-->
               <li class="sidebar-item">
                 <a href="../index.html" class="sidebar-link active">Home</a>
@@ -156,14 +155,14 @@
                   </div>
                   <div class="item">
                     <img
-                      src="img/portfolio/pfintracker-ss1.png"
+                      src="/img/portfolio/pfintracker-ss1.png"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss1.png"
+                      src="/img/portfolio/pfintracker-ss2.png"
                       alt=""
                       class="img-fluid"
                     />
