Add bookrepo page base.Add youtube embeded links

--- a/portfolio/bookrepo.html
+++ b/portfolio/bookrepo.html
@@ -100,7 +100,7 @@
                 <div class="d-flex justify-content-between">
                   
                 <h1> 
-                  <a>Personal Finance Tracker</a>
+                  <a>Book Repo</a>
                   </span>
                 </h1>
                 <div class='d-flex'>
@@ -140,14 +140,14 @@
                   </div>
                 </div>
                 <p class="lead">
-                  A personal expense tracking app with analytics to monitor trends in transactions added by user
+                  A note-taking app with ability to browse library of books, share notes taken for individual books publicly, feature to upload preferred book cover and edit number of pages per saved book
                 </p>
                 <div id="main-slider" class="owl-carousel owl-theme">
                   <div class="youtube-embed d-flex justify-content-center">
                     <iframe
                       width="853"
                       height="480"
-                      src="https://www.youtube.com/embed/dNp9IQR0bhY"
+                      src="https://www.youtube.com/embed/1-hfb2OCgQw"
                       frameborder="0"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                       allowfullscreen
@@ -178,16 +178,16 @@
                 <!-- /#main-slider-->
                 <h3>Features of the App</h3>
                 <p>
-                  1.  Log what user has spent on            
+                  1.  Add books to library     
                 </p>
                 <p>
-                  2. What categories these spendings fall into eg. Food & Drinks, Investments
+                  2. Upload a specific book cover for a particular edition of their book
                 </p>
                 <p>
-                  3. Add a note as to why they’ve spent on that time if they’d like
+                  3. Keep track of number of pages they have read by updating pages read
                 </p>
                 <p>
-                  4. Analytics for spendings across all-time and any period of the user’s choice
+                  4. Users have choice to share notes with other users or to keep it private
                 </p>
                 <h3>Technical Learnings</h3>
                 <ul>
