Add new project pages

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
             <div class="col-md-6 grid-item">
               <div class="box-masonry">
                 <a
-                  href="levelsportal.html"
+                  href="/portfolio/levelsportal.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/groupBuy/levelsportal.png"
+                    src="img/portfolio/levelsportal.png"
                     alt=""
                     class="img-fluid"
                 /></a>
@@ -139,14 +139,14 @@
               </div>
             </div>
 
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6  mt-4 grid-item">
               <div class="box-masonry">
                 <a
-                  href="bookrepo.html"
+                  href="/portfolio/bookrepo.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/portfolio/bookrepo.jpg"
+                    src="img/portfolio/bookrepo-ss1.png"
                     alt=""
                     class="img-fluid"
                 /></a>
@@ -160,19 +160,19 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6 mt-3 grid-item">
               <div class="box-masonry">
                 <a
-                  href="palace.html"
+                  href="/portfolio/travelplanner.html"
                   title=""
                   class="box-masonry-image with-hover-overlay with-hover-icon"
                   ><img
-                    src="img/projects/palace/gameplay.png"
+                    src="img/portfolio/travelplanner-ss1.png"
                     alt=""
                     class="img-fluid"
                 /></a>
                 <div class="box-masonry-text">
-                  <h4><a href="palace.html">Travel Planner</a></h4>
+                  <h4><a href="/portfolio/travelplanner.html">Travel Planner</a></h4>
                   <div class="box-masonry-desription">
                     <p>
                       Travel planning application for users to add popular itinerary trip items & Google searches to their board
@@ -202,7 +202,7 @@
                 </div>
               </div>
             </div>            
-            <div class="col-md-6 grid-item">
+            <div class="col-md-6  mt-3 grid-item">
               <div class="box-masonry">
                 <a
                   href="videopoker.html"
@@ -218,6 +218,27 @@
                   <div class="box-masonry-desription">
                     <p>
                       An arcade casino game remake, based the classic five-card draw poker
+                    </p>
+                  </div>
+                </div>
+              </div>             
+            </div>
+            <div class="col-md-6 grid-item">
+              <div class="box-masonry">
+                <a
+                  href="videopoker.html"
+                  title=""
+                  class="box-masonry-image with-hover-overlay with-hover-icon"
+                  ><img
+                    src="img/connectfour.png"
+                    alt=""
+                    class="img-fluid"
+                /></a>
+                <div class="box-masonry-text">
+                  <h4><a href="connectfour.html">Connect Four</a></h4>
+                  <div class="box-masonry-desription">
+                    <p>
+                      Classic connectfour
                     </p>
                   </div>
                 </div>
