--- a/portfolio/bookrepo.html
+++ b/portfolio/bookrepo.html
@@ -106,36 +106,25 @@
                 <div class='d-flex'>
                   <div class='text-center mr-3'>
                   <a
-                    href=https://savify.netlify.app/
+                    href=""
                     title=""
                     class="github mr-3"
                   >
-                    <span title="Personal Finance Tracker"
+                    <span title="Book Repo"
                       ><i class="fa fa-external-link-square project-github-link text-center"></i></span
                   ></a>
                   <div class='repo-label text-center'>Deployed App</div>  
                   </div>
                   <div class='text-center'>
                   <a
-                    href=https://github.com/jerome-chua/pfintracker-frontend
+                    href=https://github.com/jerome-chua/bookrepo-heroku
                     title=""
                     class="github mr-3"
                   >
                     <span title="Front End Github Repo"
                       ><i class="fa fa-github project-github-link"></i></span
                   ></a>
-                  <div class='repo-label text-center'>Front End Repo</div>  
-                  </div>
-                  <div class='text-center'>
-                  <a
-                    href=https://github.com/jerome-chua/pfintracker-backend
-                    title=""
-                    class="github mr-3"
-                  >
-                    <span title="Back End Github Repo"
-                      ><i class="fa fa-github project-github-link"></i></span
-                  ></a>
-                  <div class='repo-label text-center ml-3'>Back End Repo</div>  
+                  <div class='repo-label text-center'>GitHub Repo</div>  
                   </div>
                   </div>
                 </div>
@@ -155,82 +144,75 @@
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss1.png"
+                      src="/img/portfolio/bookrepo.jpg"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss2.png"
+                      src="/img/portfolio/bookrepo-ss2.png"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss3.png"
+                      src="/img/portfolio/bookrepo-ss6.png"
+                      alt=""
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="item">
+                    <img
+                      src="/img/portfolio/bookrepo-ss5.png"
+                      alt=""
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="item">
+                    <img
+                      src="/img/portfolio/bookrepo-ss3.png"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                 </div>
                 <!-- /#main-slider-->
-                <h3>Features of the App</h3>
-                <p>
-                  1.  Add books to library     
-                </p>
-                <p>
-                  2. Upload a specific book cover for a particular edition of their book
-                </p>
-                <p>
-                  3. Keep track of number of pages they have read by updating pages read
-                </p>
-                <p>
-                  4. Users have choice to share notes with other users or to keep it private
-                </p>
-                <h3>Technical Learnings</h3>
-                <ul>
-                  <li>
-                   Loren ipsum
-                  </li>
-                  <li>Loren ipsum</li>
-                  <li>
-                    Loren ipsum
-                  </li>
-                  <li>
-                   Loren ipsum
-                  </li>
-                  <li>
-                    Loren ipsum
-                  </li>
-                </ul>
-                <h3>Reflections</h3>
-                <ul>
-                  <li>
-                  Loren ipsum
-                  </li>
-                  <li>
-                  Loren ipsum
-                  </li>
-                  <li>
-                   Loren ipsum
-                  </li>
-                  <li>
-                   Loren ipsum
-                  </li>
-                  <li>
-                    Loren ipsum
-                  </li>
-                </ul>
-
-
+                <h3>App Features</h3>
+                <ol>
+                  <li>&nbsp Add books to library </li>
+                  <li>&nbsp Upload a specific book cover for a particular edition of their book </li>
+                  <li>&nbsp Keep track of number of pages they have   read by updating pages read </li>
+                  <li>&nbsp Users have choice to share notes with other users or to keep it private</li>
+                  <li>&nbsp Shareable link easily avaiable with click of a button</li>
+                </ol>
                 <h3>Technologies Used</h3>
                 <ul>
-                  <li><b>Frontend:</b> React, Material-UI, JSS, HTML/CSS</li>
-                  <li><b>Backend:</b> PostgresQL, Express, Sequelize</li>
+                  <li><b>Frontend:</b> HTML, CSS, Bootstrap </li>
+                  <li><b>Backend:</b> PostgreSQL, Express, Sequelize</li>
                   <li><b>Version Control:</b> Git</li>                  
-                  <li><b>Other Libraries:</b> react-chartjs-2, csv-parse, moment, clsx</li>                              
+                  <li><b>Other Libraries:</b> multer, aws-sdk</li>                              
+                </ul>
+
+                <h3>Challenges</h3>
+                <ul>
+                  <li>Heroku deployment with AWS and multer causes certain technical issues when not set up right
+                  </li>
+                  <li>Getting table to display books in order after a new one has been added</li>
+                  <li>Implementing a standard naming convention for the routes at the start
+                  </li>
+                </ul>
+                <h3>What I'd Do Differently</h3>
+                <ul>
+                  <li>Routes could be named better - in accordance to the functionality of the route
+                  </li>
+                  <li>Deployment to be done as soon as MVP was up, issues arise when there are other technologies at play eg. AWS, dealin with keys and secrets etc.
+                  </li>
+                  <li>Have a universal unique ID for each book, rather than for each user
+                  </li>
+                  <li>Spend less time on home ad page, and more other features of the app like abiltiy to sort table
+                  </li>
                 </ul>
               </div>
             </div>
