--- a/portfolio/levelsportal.html
+++ b/portfolio/levelsportal.html
@@ -100,54 +100,44 @@
                 <div class="d-flex justify-content-between">
                   
                 <h1> 
-                  <a>Personal Finance Tracker</a>
+                  <a>Levels Portal</a>
                   </span>
                 </h1>
                 <div class='d-flex'>
                   <div class='text-center mr-3'>
                   <a
-                    href=https://savify.netlify.app/
+                    href=""
                     title=""
                     class="github mr-3"
                   >
-                    <span title="Personal Finance Tracker"
+                    <span title="Levels Portal="
                       ><i class="fa fa-external-link-square project-github-link text-center"></i></span
                   ></a>
-                  <div class='repo-label text-center'>Deployed App</div>  
+                <div class='repo-label text-center'>Deployed App</div>  
                   </div>
                   <div class='text-center'>
                   <a
-                    href=https://github.com/jerome-chua/pfintracker-frontend
+                    href=https://github.com/jerome-chua/levels-portal
                     title=""
                     class="github mr-3"
                   >
                     <span title="Front End Github Repo"
                       ><i class="fa fa-github project-github-link"></i></span
                   ></a>
-                  <div class='repo-label text-center'>Front End Repo</div>  
+                  <div class='repo-label text-center'>GitHub Repo</div>  
                   </div>
-                  <div class='text-center'>
-                  <a
-                    href=https://github.com/jerome-chua/pfintracker-backend
-                    title=""
-                    class="github mr-3"
-                  >
-                    <span title="Back End Github Repo"
-                      ><i class="fa fa-github project-github-link"></i></span
-                  ></a>
-                  <div class='repo-label text-center ml-3'>Back End Repo</div>  
                   </div>
                   </div>
                 </div>
                 <p class="lead">
-                  A personal expense tracking app with analytics to monitor trends in transactions added by user
+                A tech job portal with job title autocomplete, feature to filter for relevant skill sets, save preferred jobs to apply
                 </p>
                 <div id="main-slider" class="owl-carousel owl-theme">
                   <div class="youtube-embed d-flex justify-content-center">
                     <iframe
                       width="853"
                       height="480"
-                      src="https://www.youtube.com/embed/dNp9IQR0bhY"
+                      src="https://www.youtube.com/embed/1-hfb2OCgQw"
                       frameborder="0"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                       allowfullscreen
@@ -155,62 +145,63 @@
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss1.png"
+                      src="/img/portfolio/levelsportal.png"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss2.png"
+                      src="/img/portfolio/levelsportal-ss2.png"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                   <div class="item">
                     <img
-                      src="/img/portfolio/pfintracker-ss3.png"
+                      src="/img/portfolio/levelsportal-ss1.png"
+                      alt=""
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="item">
+                    <img
+                      src="/img/portfolio/levelsportal-ss3.png"
                       alt=""
                       class="img-fluid"
                     />
                   </div>
                 </div>
                 <!-- /#main-slider-->
-                <h3>Features of the App</h3>
+                <h3>App Features</h3>
                 <ol>
-                  <li>&nbsp Log what user has spent on </li>
-                  <li>&nbsp User is able to observe which categories their spendings fall into eg. Food & Drinks </li>
-                  <li>&nbsp Add a note as to why they’ve spent on that time if they’d like </li>
-                  <li>&nbsp Analytics for spendings across all-time and any period of the user’s choice</li>
-                  <li>&nbsp Filter for day, week or month to inspect trends more closely</li>
+                  <li>&nbsp Search for jobs related to tech  </li>
+                  <li>&nbsp Refine job search by filtering for relevant skillsets </li>
+                  <li>&nbsp Save relevant jobs to be applied later on company site</li>
+                  <li>&nbsp See the skillsets required for each job</li>
                 </ol>
-
                 <h3>Technologies Used</h3>
                 <ul>
-                  <li><b>Frontend:</b> React, Material-UI, JSS, HTML/CSS</li>
-                  <li><b>Backend:</b> PostgreSQL, Express, Sequelize</li>
+                  <li><b>Frontend:</b> React, Bootstrap, SASS, HTML/CSS</li>
+                  <li><b>Backend:</b> PostgresSQL, Express, Sequelize</li>
                   <li><b>Version Control:</b> Git</li>                  
-                  <li><b>Other Libraries:</b> react-chartjs-2, csv-parse, moment, clsx, axios</li>                              
+                  <li><b>Other Libraries:</b> react-dnd, react-bootstrap-typeahead, moment, axios</li>                              
                 </ul>
-
                 <h3>Challenges</h3>
                 <ul>
-                  <li>Balancing trade-offs between interesting features vs. MVP and base user flow
+                  <li>test
                   </li>
-                  <li>Creating of custom hook at the start was later refactored to have code to be within the components itself to minimise re-rendering</li>
-                  <li>Organising structure of the code, and setting the time to plan ahead to create more resuable-friendly parent components
+                  <li>test</li>
+                  <li>test
                   </li>
-
                 </ul>
                 <h3>What I'd Do Differently</h3>
                 <ul>
-                  <li>Focus on getting MVP fully done first before moving on to add more features
+                  <li>
                   </li>
-                  <li>Spend more time in planning components that could have been reusable
+                  <li>
                   </li>
-                  <li>Prioritising a budget planning feature out for a more robust app
-                  </li>
-                  <li>Refactor more often with every new branch merge
+                  <li>
                   </li>
                 </ul>
               </div>
